# oh-my-vpn

./: .env.example  .gitignore  AGENTS.md  PLAN.md  index.html  package.json
.github/: pull_request_template.md
.github/workflows/: architecture-review.yml
docs/: glossary.md
docs/adr/: 0001-use-wireguard-go-with-wg-quick.md  0002-use-rust-sdk-for-cloud-providers.md  0003-no-network-extension-for-mvp.md  0004-ephemeral-ssh-keys-per-session.md  (+4 more)
src/: App.css  App.tsx  main.tsx  tokens.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: wg-aarch64-apple-darwin  wg-quick-aarch64-apple-darwin  wireguard-go-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: cancel_quit.toml  check_orphaned_servers.toml  connect.toml  disconnect.toml  get_preferences.toml  get_session_status.toml  list_providers.toml  list_regions.toml  register_provider.toml  remove_provider.toml  resolve_orphaned_server.toml  update_preferences.toml
src-tauri/src/: error.rs  keychain_adapter.rs  lib.rs  main.rs  preferences_store.rs  provider_manager.rs  server_lifecycle.rs  session_tracker.rs  tray.rs  types.rs  vpn_manager.rs
src-tauri/src/ipc/: app.rs  mod.rs  preferences.rs  provider.rs  server.rs  session.rs
src-tauri/src/provider_manager/: aws.rs  cache.rs  cloud_provider.rs  gcp.rs  hetzner.rs  mod.rs  registry.rs
src-tauri/src/server_lifecycle/: cleanup.rs  cloud_init.rs  connect.rs  disconnect.rs  mod.rs  orphan.rs  ssh_keys.rs
src-tauri/src/vpn_manager/: config.rs  keys.rs  mod.rs  tunnel.rs
(+61 files in other folders)
