[package]
name = "oh-my-vpn"
version = "0.1.0"
description = "One-click disposable VPN via cloud servers"
authors = ["saemanas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oh_my_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security-framework = "3.7.0"
core-foundation = "0.10.1"
anyhow = "1"
async-trait = "0.1.89"
tokio = { version = "1", features = ["full"] }
hcloud = "0.25"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-pricing = "1"
base64 = "0.22"
google-cloud-compute-v1 = { version = "2.2", features = ["firewalls", "machine-types", "zones", "images"] }
google-cloud-auth = "1.6"

